chore: incubator module support for kotlin benchmarks